# arm-tf-tmp

./: README.md  config-dhcp-nfs.txt  demo.c  llvm-demo.c
arm-tf/bl31/: bl31.mk
arm-tf/include/lib/: smccc.h
arm-tf/services/pakms_svc/: pakms_svc_setup.c
linux/arch/arm64/: Makefile
linux/arch/arm64/include/asm/: unistd.h  unistd32.h
linux/arch/arm64/kernel/: process.c  sys.c
linux/include/linux/: syscalls.h
linux/include/uapi/asm-generic/: unistd.h
llvm-project/CustomPass/: CMakeLists.txt
llvm-project/CustomPass/Hello/: CMakeLists.txt  Hello.cpp
llvm-project/clang/include/clang/Driver/: Options.td
llvm-project/clang/lib/CodeGen/: BackendUtil.cpp
llvm-project/clang/lib/Driver/ToolChains/Arch/: AArch64.cpp
